Hopefully fixed score alignment

--- a/play/style.css
+++ b/play/style.css
@@ -48,7 +48,8 @@
 
 #score{
     text-align: right;
-    margin: 8;
+    margin: 0;
+    margin-top: 1%;
     
     font-family: monospace, sans-serif, Helvetica;
     font-size: 2em;
